--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <body>
 <nav>
     <ul class="navigation">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="events.html">Events</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li class="logo"><a href="#">ROBOTICS-IOEPC</a></li>
+      <li class="item"><a href="index.html">Home</a></li>
+      <li class="item"><a href="about.html">About</a></li>
+      <li class="item"><a href="events.html">Events</a></li>
+      <li class="item"><a href="gallery.html">Gallery</a></li>
+      <li class="item"><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
   </body>
