--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/main.css" />
-    <title>Robotics Club IOEPC</title>
-  </head>
-  <body>
-<nav>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Robotics Club IOEPC</title>
+
+  <link rel="stylesheet" href="./assets/main.css"/>
+  <link rel="stylesheet" href="./assets/collector.css">
+
+  <script src="./assets/jquery-3.6.0.min.js"></script>
+  <script src="./assets/main.js"></script>
+</head>
+
+<body>
+  <nav>
     <ul class="navigation">
       <li class="logo"><a href="#">ROBOTICS-IOEPC</a></li>
       <li class="item"><a href="index.html">Home</a></li>
@@ -17,6 +25,9 @@
       <li class="item"><a href="gallery.html">Gallery</a></li>
       <li class="item"><a href="contact.html">Contact</a></li>
     </ul>
-</nav>
-  </body>
+  </nav>
+
+  <footer></footer>
+</body>
+
 </html>
