Responsive-navbar-complete

--- a/index.html
+++ b/index.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Robotics Club IOEPC</title>
 
-  <title>Robotics Club IOEPC</title>
+    <link rel="stylesheet" href="./assets/main.css" />
+    <link rel="stylesheet" href="./assets/collector.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+      integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
+      crossorigin="anonymous"
+    />
+    <script src="./assets/jquery-3.6.0.min.js"></script>
+    <script src="./assets/main.js"></script>
+  </head>
 
-  <link rel="stylesheet" href="./assets/main.css"/>
-  <link rel="stylesheet" href="./assets/collector.css">
+  <body>
+    <navbar></navbar>
 
-  <script src="./assets/jquery-3.6.0.min.js"></script>
-  <script src="./assets/main.js"></script>
-</head>
-
-<body>
-  <nav>
-    <ul class="navigation">
-      <li class="logo"><a href="#">ROBOTICS-IOEPC</a></li>
-      <li class="item"><a href="index.html">Home</a></li>
-      <li class="item"><a href="about.html">About</a></li>
-      <li class="item"><a href="events.html">Events</a></li>
-      <li class="item"><a href="gallery.html">Gallery</a></li>
-      <li class="item"><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-
-  <footer></footer>
-</body>
-
+    <footer></footer>
+  </body>
 </html>
