Added Body Context

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   <link rel="stylesheet" href="./assets/main.css" />
   <link rel="stylesheet" href="./assets/collector.css" />
+  <link rel="stylesheet" href="./per-page/index.css">
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
     integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
 
@@ -19,6 +21,16 @@
 
 <body>
   <navbar></navbar>
+
+  <div class="container">
+    <div class="top">
+      <img src="./images/robotics.webp" alt="Robotics Club" class="top-a">
+      <div class="top-b">
+        <h1>Shaping The Future</h1>
+        <h1>With Robotics</h1>
+      </div>
+    </div>
+  </div>
 
   <footer></footer>
 </body>
