--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 <body>
   <navbar></navbar>
-
+  <fullpage></fullpage>
+  <fullpage1></fullpage1>
+  <fullpage2></fullpage2>
   <footer></footer>
 </body>
 
