--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
   <title>Robotics Club IOEPC</title>
 
-  <link rel="stylesheet" href="./assets/main.css" />
-  <link rel="stylesheet" href="./assets/collector.css" />
-  <link rel="stylesheet" href="./per-page/index.css">
+  <link rel="stylesheet" href="./lib/main.css" />
+  <link rel="stylesheet" href="./per-page/index/index.css">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
     integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
 
-  <script src="./assets/jquery-3.6.0.min.js"></script>
-  <script src="./assets/main.js"></script>
+  <script src="./lib/jquery-3.6.0.min.js"></script>
+  <script src="./lib/main.js"></script>
+  <script src="./per-page/index/index.js"></script>
 </head>
 
 <body>
