--- a/about.html
+++ b/about.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <navbar></navbar>
 
-    
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Robotics Club IOEPC</title>
+
+  <link rel="stylesheet" href="./lib/main.css" />
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+    integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
+
+  <script src="./lib/jquery-3.6.0.min.js"></script>
+  <script src="./lib/main.js"></script>
+</head>
+
+<body>
+  <navbar></navbar>
+
+  <footer></footer>
 </body>
+
 </html>
