--- a/lib/html/footer.html
+++ b/lib/html/footer.html
@@ -1,11 +1,11 @@
 <div class="row" id="main-footer">
   <div class="col">
     <h2>Site Links</h2>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Events</a>
-    <a href="#">Gallary</a>
-    <a href="#">Contact</a>
+    <a href="/index.html">Home</a>
+    <a href="/about.html">About</a>
+    <a href="/events.html">Events</a>
+    <a href="/gallary.html">Gallary</a>
+    <a href="/contact.html">Contact</a>
   </div>
   <div class="col">
     <img src="/images/robotics.webp" alt="Robotics Club Logo">
