--- a/per-page/index/html/fullpage.html
+++ b/per-page/index/html/fullpage.html
@@ -1,11 +1,12 @@
-<div class="fullpage">
-<section class="intro">
-    <h1>IDEAS <span id="one">INNOVATE </span><span id="two">CREATE</span></h1>
-</section>
-    
-
-
-
-
-
+<div class="container">
+  <div class="fullpage">
+    <section class="intro">
+      <h1>
+        <span>IDEAS </span>
+        <span id="one">INNOVATE </span>
+        <span id="two">CREATE</span>
+      </h1>
+    </section>
+    <img src="./images/robotics.webp" alt="Robotics Club" id="img-a">
+  </div>
 </div>
