--- a/lib/html/navbar.html
+++ b/lib/html/navbar.html
@@ -6,8 +6,8 @@
           <img src="/images/robotics-mini-white.webp" alt="Robotics Logo" class="logo" href="#">
         </a>
       </li>
-      <li class="item"><a href="#">Home</a></li>
-      <li class="item"><a href="#">About</a></li>
+      <li class="item"><a href="/index.html">Home</a></li>
+      <li class="item"><a href="/about.html">About</a></li>
       <li class="item has-submenu">
         <a tabindex="0">Projects</a>
         <ul class="submenu">
@@ -28,7 +28,7 @@
       <li class="item"><a href="#">Team-Members</a></li>
       </li>
       <li class="item button"><a href="#">Register</a></li>
-      <li class="item button secondary"><a href="#">Contact-Us</a></li>
+      <li class="item button secondary"><a href="/contact.html">Contact-Us</a></li>
       <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
     </ul>
 
