--- a/index.html
+++ b/index.html
@@ -20,21 +20,11 @@
 </head>
 
 <body>
+  <!-- <loader></loader> -->
   <navbar></navbar>
   <fullpage></fullpage>
-  <fullpage1></fullpage1>
-  <fullpage2></fullpage2>
-
-  <div class="container">
-    <div class="top">
-      <img src="./images/robotics.webp" alt="Robotics Club" class="top-a">
-      <div class="top-b">
-        <h1>Shaping The Future</h1>
-        <h1>With Robotics</h1>
-      </div>
-    </div>
-  </div>
-
+  <!-- <fullpage1></fullpage1> -->
+  <!-- <fullpage2></fullpage2> -->
   <footer></footer>
 </body>
 
