--- a/team.html
+++ b/team.html
@@ -9,22 +9,20 @@
   <title>Robotics Club IOEPC</title>
 
   <link rel="stylesheet" href="./lib/main.css" />
-  <link rel="stylesheet" href="./per-page/index/index.css">
+  <link rel="stylesheet" href="./per-page/team/team.css">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
     integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
 
   <script src="./lib/jquery-3.6.0.min.js"></script>
   <script src="./lib/main.js"></script>
-  <script src="./per-page/index/index.js"></script>
+  <script src="./per-page/team/team.js"></script>
 </head>
 
 <body>
-  <!-- <loader></loader> -->
+
   <navbar></navbar>
   <fullpage></fullpage>
-  <!-- <fullpage1></fullpage1>
-  <fullpage2></fullpage2> -->
   <footer></footer>
 </body>
 
