our works design

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <!-- <loader></loader> -->
   <navbar></navbar>
   <fullpage></fullpage>
-  <!-- <fullpage1></fullpage1>
-  <fullpage2></fullpage2> -->
+  <fullpage1></fullpage1>
+  <fullpage2></fullpage2>
   <footer></footer>
 </body>
 
