--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <fullpage></fullpage>
   <fullpage1></fullpage1>
   <fullpage2></fullpage2>
+  <part4></part4>
+
   <footer></footer>
 </body>
 
