--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <body>
   <!-- <loader></loader> -->
   <navbar></navbar>
-  <fullpage></fullpage>
-  <fullpage1></fullpage1>
-  <fullpage2></fullpage2>
+  <part1></part1>
+  <part2></part2>
+  <part3></part3>
   <part4></part4>
 
   <footer></footer>
