Modified and Stable

--- a/lib/html/footer.html
+++ b/lib/html/footer.html
@@ -16,10 +16,10 @@
   <div class="col">
     <h2>External Links</h2>
     <a href="#">IOE, Purwanchal Campus</a>
-    <a href="#">IOE</a>
-    <a href="#">TU</a>
-    <a href="#">#</a>
-    <a href="#">#</a>
+    <a href="https://ioe.edu.np">IOE</a>
+    <a href="https://excess.ioepc.edu.np/">EXCESS</a>
+    <a href="https://aces.ioepc.edu.np/">ACES</a>
+    <a href="https://somes.ioepc.edu.np/">SOMES</a>
   </div>
 </div>
 <div class="row">
