--- a/lib/html/navbar.html
+++ b/lib/html/navbar.html
@@ -18,14 +18,21 @@
         </ul>
       </li>
       <li class="item has-submenu">
-        <a tabindex="0">Research</a>
+        <a tabindex="0">Participation</a>
         <ul class="submenu">
-          <li class="subitem"><a href="#">xyz</a></li>
-          <li class="subitem"><a href="#">xyz</a></li>
-          <li class="subitem"><a href="#">yza</a></li>
+          <li class="subitem"><a href="#">YANTRA 5.0</a></li>
+          <li class="subitem"><a href="#">IOE ROBOCON 2016</a></li>
+          <li class="subitem"><a href="#">IOE ROBOCON 2018</a></li>
+          <li class="subitem"><a href="#">AUTOMATION IN AGRICULTURAL COMPETITION IN CHINA 2018</a></li>
+          <li class="subitem"><a href="#">AUTOMATION IN AGRICULTURAL COMPETITION IN CHINA 2019</a></li>
+          <li class="subitem"><a href="#">SET- FARM 2017</a></li>
+          <li class="subitem"><a href="#">VECTOR 2.O</a></li>
+          <li class="subitem"><a href="#">YANTRA 8.O</a></li>
         </ul>
       </li>
       <li class="item"><a href="#">Team-Members</a></li>
+      <li class="item"><a href="#">Trainings</a></li>
+
       </li>
       <li class="item button"><a href="#">Register</a></li>
       <li class="item button secondary"><a href="/contact.html">Contact-Us</a></li>
