--- a/lib/html/navbar.html
+++ b/lib/html/navbar.html
@@ -1,3 +1,8 @@
+<div class="load">
+  <span class="loader"></span>
+  <span class="loaderb"></span>
+  <img src="/images/robotics.webp" alt="Robotics Loading">
+</div>
 <nav>
   <div class="container">
     <ul class="menu">
