--- a/lib/html/navbar.html
+++ b/lib/html/navbar.html
@@ -30,7 +30,7 @@
           <li class="subitem"><a href="#">YANTRA 8.O</a></li>
         </ul>
       </li>
-      <li class="item"><a href="#">Team-Members</a></li>
+      <li class="item"><a href="/team.html">Team-Members</a></li>
       <li class="item"><a href="#">Trainings</a></li>
 
       </li>
