--- a/per-page/team/html/fullpage.html
+++ b/per-page/team/html/fullpage.html
@@ -1,44 +1,122 @@
-<h2>Responsive "Meet The Team" Section</h2>
-<p>Resize the browser window to see the effect.</p>
-<br>
-
-<div class="row">
-  <div class="column">
-    <div class="card">
-      <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
-      <div class="container">
-        <h2>Sadahanda Paneru</h2>
-        <p class="title">Coordinator</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>example@example.com</p>
-        <p><button class="button">Contact</button></p>
-      </div>
+<section class="section-team">
+    <div class="container">
+        <!-- Start Header Section -->
+        <div class="row justify-content-center text-center">
+            <div class="col-md-8 col-lg-6">
+                <div class="header-section">
+                    <h3 class="small-title">Our Experts</h3>
+                    <h2 class="title">Let's meet with our team members</h2>
+                </div>
+            </div>
+        </div>
+        <!-- / End Header Section -->
+        <div class="row">
+            <!-- Start Single Person -->
+            <div class="col-sm-6 col-lg-4 col-xl-3">
+                <div class="single-person">
+                    <div class="person-image">
+                        <img src="../../../images/Team_Members/shady dai.jpg" alt="">
+                        <span class="icon">
+                            <i class="fab fa-linkedin"></i>
+                        </span>
+                    </div>
+                    <div class="person-info">
+                        <h3 class="full-name">Sadanand Paneru</h3>
+                        <span class="speciality">Coordinator</span>
+                    </div>
+                </div>
+            </div>
+            <!-- / End Single Person -->
+            <!-- Start Single Person -->
+            <div class="col-sm-6 col-lg-4 col-xl-3">
+                <div class="single-person">
+                    <div class="person-image">
+                        <img src="../../../images/Team_Members/sushant shah.jpg" alt="">
+                        <span class="icon">
+                            <i class="fab fa-linkedin"></i>
+                        </span>
+                    </div>
+                    <div class="person-info">
+                        <h3 class="full-name">Sushant Shah</h3>
+                        <span class="speciality">Secretary</span>
+                    </div>
+                </div>
+            </div>
+            <!-- / End Single Person -->
+            <!-- Start Single Person -->
+            <div class="col-sm-6 col-lg-4 col-xl-3">
+                <div class="single-person">
+                    <div class="person-image">
+                        <img src="../../../images/Team_Members/suruchi yadav.jpg" alt="">
+                        <span class="icon">
+                            <i class="fab fa-linkedin"></i>
+                        </span>
+                    </div>
+                    <div class="person-info">
+                        <h3 class="full-name">Suruchi Yadav</h3>
+                        <span class="speciality">Treasurer</span>
+                    </div>
+                </div>
+            </div>
+            <!-- / End Single Person -->
+            <!-- Start Single Person -->
+            <div class="col-sm-6 col-lg-4 col-xl-3">
+                <div class="single-person">
+                    <div class="person-image">
+                        <img src="../../../images/Team_Members/binam shrestha.jpg" alt="">
+                        <span class="icon">
+                            <i class="fab fa-linkedin"></i>
+                        </span>
+                    </div>
+                    <div class="person-info">
+                        <h3 class="full-name">Binam Shrestha</h3>
+                        <span class="speciality">Executive Member</span>
+                    </div>
+                </div>
+            </div>
+            <!-- / End Single Person -->
+            <div class="col-sm-6 col-lg-4 col-xl-3">
+                <div class="single-person">
+                    <div class="person-image">
+                        <img src="../../../images/Team_Members/hari gajurel.jpg" alt="">
+                        <span class="icon">
+                            <i class="fab fa-linkedin"></i>
+                        </span>
+                    </div>
+                    <div class="person-info">
+                        <h3 class="full-name">Hari Prasad Gajurel</h3>
+                        <span class="speciality">Executive Member</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3">
+                <div class="single-person">
+                    <div class="person-image">
+                        <img src="../../../images/Team_Members/pawan shah1.jpg" alt="">
+                        <span class="icon">
+                            <i class="fab fa-linkedin"></i>
+                        </span>
+                    </div>
+                    <div class="person-info">
+                        <h3 class="full-name">Pawan Shah</h3>
+                        <span class="speciality">Executive Member</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3">
+                <div class="single-person">
+                    <div class="person-image">
+                        <img src="../../../images/Team_Members/pratik poudel.jpg" alt="">
+                        <span class="icon">
+                            <i class="fab fa-linkedin"></i>
+                        </span>
+                    </div>
+                    <div class="person-info">
+                        <h3 class="full-name">Pratik Poudel</h3>
+                        <span class="speciality">Executive Member</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-
-  <div class="column">
-    <div class="card">
-      <img src="../../../images/robotics.webp" alt="Mike" style="width:100%">
-      <div class="container">
-        <h2>Sushant Shah</h2>
-        <p class="title">Secretary</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>example@example.com</p>
-        <p><button class="button">Contact</button></p>
-      </div>
-    </div>
-  </div>
-  
-  <div class="column">
-    <div class="card">
-      <img src="/w3images/team3.jpg" alt="John" style="width:100%">
-      <div class="container">
-        <h2>Suruchi Shah</h2>
-        <p class="title">Treasurer</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>example@example.com</p>
-        <p><button class="button">Contact</button></p>
-      </div>
-    </div>
-  </div>
-</div>
+</section>
