--- a/team.html
+++ b/team.html
@@ -17,10 +17,19 @@
   <script src="./lib/jquery-3.6.0.min.js"></script>
   <script src="./lib/main.js"></script>
   <script src="./per-page/team/team.js"></script>
+
+  <!-- added new
+   -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/fontawesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.css">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:500,700&display=swap" rel="stylesheet">
 </head>
 
-<body>
 
+  
+
+<body>
   <navbar></navbar>
   <fullpage></fullpage>
   <footer></footer>
