--- a/index.html
+++ b/index.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Robotics Club IOEPC</title>
 
-  <title>Robotics Club IOEPC</title>
+    <link rel="stylesheet" href="./lib/main.css" />
+    <link rel="stylesheet" href="./per-page/index/index.css" />
+    <link
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+      integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <script src="./lib/jquery-3.6.0.min.js"></script>
+    <script src="./lib/main.js"></script>
+    <script src="./per-page/index/index.js"></script>
+  </head>
 
-  <link rel="stylesheet" href="./lib/main.css" />
-  <link rel="stylesheet" href="./per-page/index/index.css">
+  <body>
+    <!-- <loader></loader> -->
+    <navbar></navbar>
+    <part1></part1>
+    <part2></part2>
+    <part3></part3>
+    <part4></part4>
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
-    integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
-
-  <script src="./lib/jquery-3.6.0.min.js"></script>
-  <script src="./lib/main.js"></script>
-  <script src="./per-page/index/index.js"></script>
-</head>
-
-<body>
-  <!-- <loader></loader> -->
-  <navbar></navbar>
-  <part1></part1>
-  <part2></part2>
-  <part3></part3>
-  <part4></part4>
-
-  <footer></footer>
-</body>
-
+    <footer></footer>
+  </body>
 </html>
