--- a/per-page/index/html/part2.html
+++ b/per-page/index/html/part2.html
@@ -4,7 +4,7 @@
       <h1>About Us</h1>
       <p>
         Robotics Club, IOE Purwanchal Campus is a non-profit organization on campus that provides a great platform for students and enthusiasts. The Robotics Club was created with the intention of encouraging, teaching, investigating, and competing in the field of robotics.<br><br>
-        We have been giving robotics related trainings and engaging in robotics research at IOE, Purwanchal Campus since 2073.
+        We have been giving robotics related trainings and engaging in robotics research at IOE, Purwanchal Campus since 2073.  We provide different opportunity for a student to participate in national and international competition. 
       </p>
     </section>
     <img src="./images/robotics.webp" alt="Robotics Club" id="img-a">
