--- a/lib/html/navbar.html
+++ b/lib/html/navbar.html
@@ -7,12 +7,11 @@
   <div class="container">
     <ul class="menu">
       <li class="logo">
-        <a class="logo" href="#">
+        <a class="logo" href="/index.html">
           <img src="/images/robotics-mini-white.webp" alt="Robotics Logo" class="logo" href="#">
         </a>
       </li>
       <li class="item"><a href="/index.html">Home</a></li>
-      <li class="item"><a href="/about.html">About</a></li>
       <li class="item has-submenu">
         <a tabindex="0">Projects</a>
         <ul class="submenu">
