Stable release 7:39PM 2022/06/15

--- a/lib/html/footer.html
+++ b/lib/html/footer.html
@@ -1,11 +1,10 @@
 <div class="row" id="main-footer">
   <div class="col">
-    <h2>Site Links</h2>
-    <a href="/index.html">Home</a>
-    <a href="/about.html">About</a>
-    <a href="/events.html">Events</a>
-    <a href="/gallary.html">Gallary</a>
-    <a href="/contact.html">Contact</a>
+    <h2>Connect Us</h2>
+    <a href="https://www.linkedin.com/company/roboticsclubioepc/"><i class="fab fa-linkedin"></i>
+    <a href="https://www.facebook.com/purwanchalrobotics/"><i class="fab fa-facebook"></i></a>
+    <a href="https://instagram.com/robotics_ioepc"><i class="fab fa-instagram"></i></a>
+    <a href="https://discord.gg/CDsMp77hJf"><i class="fab fa-discord"></i></a>
   </div>
   <div class="col">
     <img src="/images/robotics.webp" alt="Robotics Club Logo">
@@ -15,7 +14,7 @@
   </div>
   <div class="col">
     <h2>External Links</h2>
-    <a href="#">IOE, Purwanchal Campus</a>
+    <a href="https://ioepc.edu.np">IOE, Purwanchal Campus</a>
     <a href="https://ioe.edu.np">IOE</a>
     <a href="https://excess.ioepc.edu.np/">EXCESS</a>
     <a href="https://aces.ioepc.edu.np/">ACES</a>
