--- a/lib/html/navbar.html
+++ b/lib/html/navbar.html
@@ -27,7 +27,7 @@
           <li class="subitem"><a href="#">YANTRA 5.0</a></li>
           <li class="subitem"><a href="#">IOE ROBOCON 2016</a></li>
           <li class="subitem"><a href="#">IOE ROBOCON 2018</a></li>
-          <li class="subitem"><a href="#">AUTOMATION IN AGRICULTURAL COMPETITION IN CHINA 2018</a></li>
+          <li class="subitem"><a href="../../participation.html">AUTOMATION IN AGRICULTURAL COMPETITION IN CHINA 2018</a></li>
           <li class="subitem"><a href="#">AUTOMATION IN AGRICULTURAL COMPETITION IN CHINA 2019</a></li>
           <li class="subitem"><a href="#">SET- FARM 2017</a></li>
           <li class="subitem"><a href="#">VECTOR 2.O</a></li>
