--- a/per-page/index/html/part4.html
+++ b/per-page/index/html/part4.html
@@ -1,3 +1,13 @@
-<div class="part4">
-        
-</div>
+<div class="container">
+    <div class="part2">
+      <section class="intro">
+        <h1>Message From Mentor</h1>
+     
+        <p>
+            Robotics Club Purwanchal Campus is not profitable organization with in Purwanchal campus,which  provides an outstanding platform for students and enthusiasts. Robotics Club is established to promote, educate, explore, and compete in the field of robotics.
+        </p>
+        <h2>     - Er. Dipendra Neupane</h2>
+      </section>
+      <img src="../../../images/Team_Members/cropped-sir-300x246.jpg" alt="Robotics Club" id="img-a">
+    </div>
+  </div>
