--- a/participation.html
+++ b/participation.html
@@ -8,7 +8,7 @@
     <title>Robotics Club IOEPC</title>
 
     <link rel="stylesheet" href="./lib/main.css" />
-    <link rel="stylesheet" href="./per-page/index/index.css" />
+    <link rel="stylesheet" href="./per-page/participations/participate.css" />
 
     <link
       rel="stylesheet"
@@ -16,20 +16,14 @@
       integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
       crossorigin="anonymous"
     />
-
     <script src="./lib/jquery-3.6.0.min.js"></script>
     <script src="./lib/main.js"></script>
-    <script src="./per-page/index/index.js"></script>
+    <script src="./per-page/participations/participate.js"></script>
   </head>
 
   <body>
-    <!-- <loader></loader> -->
     <navbar></navbar>
-    <part1></part1>
-    <part2></part2>
-    <part4></part4>
-    <part3></part3>
-
+    <china2018></china2018>
     <footer></footer>
   </body>
 </html>
