participations image remaining

--- a/lib/html/navbar.html
+++ b/lib/html/navbar.html
@@ -24,14 +24,14 @@
       <li class="item has-submenu">
         <a tabindex="0">Participation</a>
         <ul class="submenu">
-          <li class="subitem"><a href="#">YANTRA 5.0</a></li>
-          <li class="subitem"><a href="#">IOE ROBOCON 2016</a></li>
-          <li class="subitem"><a href="#">IOE ROBOCON 2018</a></li>
-          <li class="subitem"><a href="../../participation.html">AUTOMATION IN AGRICULTURAL COMPETITION IN CHINA 2018</a></li>
-          <li class="subitem"><a href="#">AUTOMATION IN AGRICULTURAL COMPETITION IN CHINA 2019</a></li>
-          <li class="subitem"><a href="#">SET- FARM 2017</a></li>
-          <li class="subitem"><a href="#">VECTOR 2.O</a></li>
-          <li class="subitem"><a href="#">YANTRA 8.O</a></li>
+          <li class="subitem"><a href="../../yantra5.html">YANTRA 5.0</a></li>
+          <li class="subitem"><a href="../../robocon2016.html">IOE ROBOCON 2016</a></li>
+          <li class="subitem"><a href="../../robocon2018.html">IOE ROBOCON 2018</a></li>
+          <li class="subitem"><a href="../../china2018.html">AUTOMATION IN AGRICULTURAL COMPETITION IN CHINA 2018</a></li>
+          <li class="subitem"><a href="../../china2019.html">AUTOMATION IN AGRICULTURAL COMPETITION IN CHINA 2019</a></li>
+          <li class="subitem"><a href="../../setfarm.html">SET- FARM 2017</a></li>
+          <li class="subitem"><a href="../../vector.html">VECTOR 2.O</a></li>
+          <li class="subitem"><a href="../../yantra8.html">YANTRA 8.O</a></li>
         </ul>
       </li>
       <li class="item"><a href="/team.html">Team-Members</a></li>
