--- a/yantra5.html
+++ b/yantra5.html
@@ -8,22 +8,41 @@
     <title>Robotics Club IOEPC</title>
 
     <link rel="stylesheet" href="./lib/main.css" />
-    <link rel="stylesheet" href="./per-page/participations/participate.css" />
-
+    <link rel="stylesheet" href="./participate.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
       integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
       crossorigin="anonymous"
     />
+
     <script src="./lib/jquery-3.6.0.min.js"></script>
     <script src="./lib/main.js"></script>
-    <script src="./per-page/participations/participate.js"></script>
   </head>
 
   <body>
+    <!-- <loader></loader> -->
     <navbar></navbar>
-    <china2018></china2018>
+    <main id="main">
+      <div class="container">
+        <!-- Title of the page -->
+        <h1 id="title">YANTRA 5.0</h1>
+
+        <div id="img">
+          <img
+            src="../../images/participations/china2018.jpg"
+            id="image"
+            alt="Error Loading Image"
+          />
+          <h2>
+            Robotics Association Nepal (RAN) organizes the annual event named
+            YANTRA. In year 2073 B.S. our club has participated in YANTRA 5.0
+            and shows the great performance in the main event.
+          </h2>
+        </div>
+      </div>
+    </main>
+
     <footer></footer>
   </body>
 </html>
