stable participations 8:17 PM 2022/06/15

--- a/setfarm.html
+++ b/setfarm.html
@@ -26,7 +26,7 @@
       <h1 id="title">SET- FARM 2017</h1>
 
       <div id="img">
-        <img src="../../images/participations/china2018.jpg" id="image" alt="Error Loading Image" />
+        <img src="./images/participations/setfarm.jpg" id="image" alt="Error Loading Image" />
         <h2>
           Centre for Applied Research and Development (CARD) and Institute of Engineering ERC Dharan have been organized
           3 days summer school on “Sustainable Engineering Tools for Agricultural Robotics and Mechanization ~ SET FARM
