--- a/vector.html
+++ b/vector.html
@@ -26,7 +26,7 @@
       <h1 id="title">VECTOR 2.O</h1>
 
       <div id="img">
-        <img src="../../images/participations/china2018.jpg" id="image" alt="Error Loading Image" />
+        <img src="./images/participations/vector.jpg" id="image" alt="Error Loading Image" />
         <h2>
           Vector – direct your vision is a national-level technical festival held at Paschimanchal campus annually. This
           year, Vector organized many competitions on several engineering disciplines , like code camps, mapathons,
