--- a/china2019.html
+++ b/china2019.html
@@ -30,7 +30,7 @@
 
         <div id="img">
           <img
-            src="../../images/participations/china2018.jpg"
+            src="./images/participations/china2018.jpg"
             id="image"
             alt="Error Loading Image"
           />
