--- a/lib/html/navbar.html
+++ b/lib/html/navbar.html
@@ -15,7 +15,7 @@
       <li class="item has-submenu">
         <a tabindex="0">Projects</a>
         <ul class="submenu">
-          <li class="subitem"><a href="#">Robotic-Arm</Robotic-Arm></a></li>
+          <li class="subitem"><a href="/projects/arm.html">Robotic-Arm</Robotic-Arm></a></li>
           <li class="subitem"><a href="#">Self-Balancing-Robot</a></li>
           <li class="subitem"><a href="#">Carrier-Robot</a></li>
           <li class="subitem"><a href="#">Mars-Rover</a></li>
