--- a/per-page/team/html/fullpage.html
+++ b/per-page/team/html/fullpage.html
@@ -5,7 +5,7 @@
       <div class="col-md-8 col-lg-6">
         <div class="header-section">
           <!-- <h3 class="small-title">Our Experts</h3> -->
-          <h2 class="title">Meet with our team members</h2>
+          <h2 class="title">Our Executive Team</h2>
         </div>
       </div>
     </div>
@@ -17,7 +17,9 @@
           <div class="person-image">
             <img src="../../../images/Team_Members/shady dai.jpg" alt="">
             <span class="icon">
-              <i class="fab fa-linkedin"></i>
+              <a href="
+              https://www.linkedin.com/in/saddy-paneru-0114181b9"><i class="fab fa-linkedin"></i></a>
+
             </span>
           </div>
           <div class="person-info">
@@ -33,7 +35,8 @@
           <div class="person-image">
             <img src="../../../images/Team_Members/sushant shah.jpg" alt="">
             <span class="icon">
-              <i class="fab fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/sushant-shah"><i class="fab fa-linkedin"></i></a>
+
             </span>
           </div>
           <div class="person-info">
@@ -49,7 +52,8 @@
           <div class="person-image">
             <img src="../../../images/Team_Members/suruchi yadav.jpg" alt="">
             <span class="icon">
-              <i class="fab fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/shuruchi-yadav-0a54a9239/"><i class="fab fa-linkedin"></i></a>
+
             </span>
           </div>
           <div class="person-info">
@@ -65,7 +69,7 @@
           <div class="person-image">
             <img src="../../../images/Team_Members/binam shrestha.jpg" alt="">
             <span class="icon">
-              <i class="fab fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/bnm100"> <i class="fab fa-linkedin"></i></a>
             </span>
           </div>
           <div class="person-info">
@@ -80,7 +84,8 @@
           <div class="person-image">
             <img src="../../../images/Team_Members/hari gajurel.jpg" alt="">
             <span class="icon">
-              <i class="fab fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/hari-prasad-gajurel-2b955b241"> <i class="fab fa-linkedin"></i></a>
+
             </span>
           </div>
           <div class="person-info">
@@ -94,7 +99,8 @@
           <div class="person-image">
             <img src="../../../images/Team_Members/pawan shah1.jpg" alt="">
             <span class="icon">
-              <i class="fab fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/codexpawan"><i class="fab fa-linkedin"></i></a>
+
             </span>
           </div>
           <div class="person-info">
@@ -108,12 +114,70 @@
           <div class="person-image">
             <img src="../../../images/Team_Members/pratik poudel.jpg" alt="">
             <span class="icon">
-              <i class="fab fa-linkedin"></i>
+              <a href="
+              https://www.linkedin.com/in/pratik-poudel-65a131212"><i class="fab fa-linkedin"></i></a>
+
             </span>
           </div>
           <div class="person-info">
             <h3 class="full-name">Pratik Poudel</h3>
             <span class="speciality">Executive Member</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+<!-- designers -->
+
+<div class="developers"></div>
+<section class="section-team">
+  <div class="container">
+    <!-- Start Header Section -->
+    <div class="row justify-content-center text-center">
+      <div class="col-md-8 col-lg-6">
+        <div class="header-section">
+          <!-- <h3 class="small-title">Our Experts</h3> -->
+          <h2 class="title">Meet our Developers</h2>
+        </div>
+      </div>
+    </div>
+    <!-- / End Header Section -->
+    <div class="row">
+      <!-- Start Single Person -->
+      <div class="col-sm-6 col-lg-4 col-xl-3">
+        <div class="single-person">
+          <div class="person-image">
+            <img src="../../../images/Team_Members/Developers/next.jpg" alt="">
+            <span class="icon">
+              <a href="https://www.linkedin.com/in/sudipnext/"> <i class="fab fa-linkedin"></i></a>
+
+            </span>
+          </div>
+          <div class="person-info">
+            <h3 class="full-name">Sudip Parajuli</h3>
+            <span class="speciality">Developer</span>
+          </div>
+        </div>
+      </div>
+      <!-- / End Single Person -->
+      <!-- Start Single Person -->
+      <div class="col-sm-6 col-lg-4 col-xl-3">
+        <div class="single-person">
+          <div class="person-image">
+            <img src="../../../images/Team_Members/Developers/dkc.jpg" alt="">
+            <span class="icon">
+              <a href="https://www.linkedin.com/in/dkc195/"><i class="fab fa-linkedin"></i></a>
+
+            </span>
+          </div>
+          <div class="person-info">
+            <h3 class="full-name">Dhiraj KC</h3>
+            <span class="speciality">Developer</span>
           </div>
         </div>
       </div>
