--- a/lib/html/navbar.html
+++ b/lib/html/navbar.html
@@ -16,9 +16,9 @@
         <a tabindex="0">Projects</a>
         <ul class="submenu">
           <li class="subitem"><a href="/projects/arm.html">Robotic-Arm</Robotic-Arm></a></li>
-          <li class="subitem"><a href="#">Self-Balancing-Robot</a></li>
-          <li class="subitem"><a href="#">Carrier-Robot</a></li>
-          <li class="subitem"><a href="#">Mars-Rover</a></li>
+          <!-- <li class="subitem"><a href="#">Self-Balancing-Robot</a></li> -->
+          <!-- <li class="subitem"><a href="#">Carrier-Robot</a></li> -->
+          <!-- <li class="subitem"><a href="#">Mars-Rover</a></li> -->
         </ul>
       </li>
       <li class="item has-submenu">
@@ -31,7 +31,7 @@
           <li class="subitem"><a href="../../china2019.html">AUTOMATION IN AGRICULTURAL COMPETITION IN CHINA 2019</a></li>
           <li class="subitem"><a href="../../setfarm.html">SET- FARM 2017</a></li>
           <li class="subitem"><a href="../../vector.html">VECTOR 2.O</a></li>
-          <li class="subitem"><a href="../../yantra8.html">YANTRA 8.O</a></li>
+          <!-- <li class="subitem"><a href="../../yantra8.html">YANTRA 8.O</a></li> -->
         </ul>
       </li>
       <li class="item"><a href="/team.html">Team-Members</a></li>
