Finalize Stable 9:13 PM

--- a/per-page/team/html/fullpage.html
+++ b/per-page/team/html/fullpage.html
@@ -79,7 +79,7 @@
         </div>
       </div>
       <!-- / End Single Person -->
-      <div class="col-sm-6 col-lg-4 col-xl-3 new">
+      <div class="col-sm-6 col-lg-4 col-xl-3 new lefty">
         <div class="single-person">
           <div class="person-image">
             <img src="../../../images/Team_Members/hari gajurel.jpg" alt="">
@@ -134,7 +134,6 @@
 
 <!-- designers -->
 
-<div class="developers"></div>
 <section class="section-team">
   <div class="container">
     <!-- Start Header Section -->
@@ -149,13 +148,12 @@
     <!-- / End Header Section -->
     <div class="row">
       <!-- Start Single Person -->
-      <div class="col-sm-6 col-lg-4 col-xl-3">
+      <div class="col-sm-6 col-lg-4 col-xl-3 leftt">
         <div class="single-person">
           <div class="person-image">
             <img src="../../../images/Team_Members/Developers/next.jpg" alt="">
             <span class="icon">
               <a href="https://www.linkedin.com/in/sudipnext/"> <i class="fab fa-linkedin"></i></a>
-
             </span>
           </div>
           <div class="person-info">
@@ -184,3 +182,4 @@
     </div>
   </div>
 </section>
+</div>
