Updated Nav Bar

--- a/lib/html/navbar.html
+++ b/lib/html/navbar.html
@@ -35,7 +35,7 @@
         </ul>
       </li>
       <li class="item"><a href="/team.html">Team-Members</a></li>
-      <li class="item"><a href="#">Trainings</a></li>
+      <!-- <li class="item"><a href="#">Trainings</a></li> -->
 
       </li>
       <li class="item button"><a href="#">Register</a></li>
