--- a/projects/arm.html
+++ b/projects/arm.html
@@ -22,7 +22,7 @@
   <navbar></navbar>
   <div id="main">
     <div class="vid">
-      <iframe src="https://www.youtube.com/embed/-dzIhfqoEDE" title="YouTube video player"
+      <iframe src="https://www.youtube.com/embed/-dzIhfqoEDE" title="Robotic-Arm Video"
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
     </div>
